Changelog
=========

0.4 - Unreleased
----------------

* Add selection criteria

0.3 - 2009-01-15
----------------

* Fully re-use the AT edit widgets
* Support criteria with multiple fields
* Use the widgets to process the form values
* Add checkbox criterion based on ATSelectionCriterion,
  ATPortalTypeCriterion, and ATReferenceCriterion
* Add a date range form criterion (JS calendar not working yet)

0.2 - 2008-05-27
----------------

* Fix i18n_domain in ZCML
* Make the authenticator view conditional for Plone 3.0 compatibility

0.1 - 2008-05-24
----------------

* Initial release
