@@ -11,6 +11,7 @@
    <criteria>ATSimpleStringCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
   </index>
   <index name="Description" description="" enabled="True" friendlyName="Description"
      i18n:attributes="description; friendlyName">
@@ -20,6 +21,7 @@
   <index name="getEventType" description="" enabled="False" friendlyName="">
    <criteria>ATCurrentAuthorCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
    <criteria>ATReferenceCriterion</criteria>
    <criteria>ReferenceCheckboxFormCriterion</criteria>
    <criteria>ATSelectionCriterion</criteria>
@@ -36,6 +38,7 @@
    <criteria>ATSimpleStringCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
   </index>
   <index name="id" description="The short name of an item (used in the url)"
      enabled="False" friendlyName="Short Name"
@@ -43,6 +46,7 @@
    <criteria>ATSimpleStringCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
   </index>
   <index name="review_state"
      description="An item's workflow state (e.g.published)" enabled="True"
@@ -54,6 +58,7 @@
    <criteria>ATSimpleStringCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
   </index>
   <index name="SearchableText" description="Text search of an item's contents"
      enabled="True" friendlyName="Search Text"
@@ -70,6 +75,7 @@
    <criteria>ATSimpleStringCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ATListCriterion</criteria>
+   <criteria>ListFormCriterion</criteria>
   </index>
   <index name="Title" description="Text search of an item's title"
      enabled="True" friendlyName="Title"
